--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Homemade Lasagna</a></li>
+        <li><a href="./recipes/tinga.html">Mexican Tinga</a></li>
+        <li><a href="./recipes/birria_tacos.html">Birria Tacos</a></li>
+    </ul>
+
 </body>
 
 </html>
